<resources>
    <string name="btn_pokemon" translatable="false">Pokemon</string>
    <string name="btn_digimon" translatable="false">Digimon</string>
    <string name="pokemon_water" translatable="false">Oshawott</string>
    <string name="pokemon_fire" translatable="false">Fuecoco</string>
    <string name="pokemon_grass" translatable="false">Rowlet</string>
    <string name="pokemon_electric" translatable="false">Toxtricity</string>

    <string name="app_name">Menus JMSB</string>
    <string name="main_fragment">Main Menu</string>
    <string name="btn_rookie">Rockie</string>
    <string name="btn_champion">Champion</string>
    <string name="btn_mega">Mega</string>

    <string name="option_water">Water</string>
    <string name="option_fire">Fire</string>
    <string name="option_grass">Grass</string>
    <string name="option_electric">Electric</string>


</resources>