<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemon_nav_graph"
    app:startDestination="@id/waterFragment">

    <fragment
        android:id="@+id/waterFragment"
        android:name="com.example.menustest_jmsb.WaterFragment"
        android:label="@string/option_water"
        tools:layout="@layout/fragment_water" />
    <fragment
        android:id="@+id/fireFragment"
        android:name="com.example.menustest_jmsb.FireFragment"
        android:label="@string/option_fire"
        tools:layout="@layout/fragment_fire" />
    <fragment
        android:id="@+id/plantFragment"
        android:name="com.example.menustest_jmsb.PlantFragment"
        android:label="@string/option_grass"
        tools:layout="@layout/fragment_plant" />
    <fragment
        android:id="@+id/electricFragment"
        android:name="com.example.menustest_jmsb.ElectricFragment"
        android:label="@string/option_electric"
        tools:layout="@layout/fragment_electric" />
</navigation>